Added a lovely footer

--- a/jogo-da-velha.html
+++ b/jogo-da-velha.html
@@ -32,6 +32,10 @@
         <button>Reiniciar</button>
     </div>
 
+    <footer>
+        <p>Made whith 🖤 by Mitsrael Souza</p>
+    </footer>
+
     <script type="text/javascript" src="./game.js"></script>
 
 </body>
